# limiai

./: README.md
Challenge 1-2,4/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  dvc.yaml  model_metadata.txt  pyproject.toml
Challenge 1-2,4/.github/workflows/: main_ci.yml
Challenge 1-2,4/app/: main.py
Challenge 1-2,4/app/api/v1/endpoints/: analyze.py
Challenge 1-2,4/app/core/: config.py
Challenge 1-2,4/app/schemas/: analyze.py
Challenge 1-2,4/app/services/: cache_service.py  nlp_service.py  tracking_service.py  yolo_service.py
Challenge 3/docs/: component_hierarchy.md
Challenge 3/limiai-fe/: .gitignore  README.md  index.html  package-lock.json  package.json
Challenge 3/limiai-fe/src/: App.jsx  index.css
Challenge 3/limiai-fe/src/components/: AnalysisDisplay.jsx  ImageUpload.jsx
