[project]
name = "challenge-1-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.3",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "python-multipart>=0.0.24",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.5.0",
    "ultralytics>=8.4.33",
    "uvicorn>=0.44.0",
    "mlflow>=2.20.2",
    "pydantic-settings>=2.8.1",
    "dvc>=3.67.1",
]
